Rebranded Kiln to EFES.

--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -5,5 +5,5 @@
   <message key="menu-inscriptions">Inscriptions</message>
   <message key="menu-search">Search</message>
   <message key="menu-admin">Admin</message>
-  <message key="home-title">Welcome to Kiln!</message>
+  <message key="home-title">Welcome to EFES!</message>
 </catalogue>
