added indices of places, divinities, prosopography, institutions; added facets for mentioned places, mentioned divinities, mentioned institutions, inscription type; partially corrected alphabetic ordering in indices

--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -8,6 +8,10 @@
   <message key="menu-index-lemma">Lemmata</message>
   <message key="menu-index-numeral">Numerals</message>
   <message key="menu-index-person_name">Personal names</message>
+   <message key="prosopography">Prosopography</message> 
+  <message key="divinities">Divinities</message>  
+  <message key="mentioned_places">Places</message>
+   <message key="institutions">Institutions</message> 
   <message key="menu-index-symbol">Symbols</message>
   <message key="menu-index-word">Words</message>
   <message key="menu-search">Search</message>
