adjusted bibliographic concordance
This commit should hopefully fix in a more efficient way the bug concerning the repetition of the same entries in the concordance list that was badly fixed here https://github.com/EpiDoc/EFES/commit/42819d53879934d9c8ec5758d1bcc28aba42eaad (which made the concordance very slow to load).
It also includes some improvements in the concordance display derived from the customisation of EFES for InsLib corpora (alternative sorting by title or date; display of all bibliography: see https://github.com/EpiDoc/EFES/issues/62).

--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -16,4 +16,5 @@
   <message key="menu-index-word">Words</message>
   <message key="menu-search">Search</message>
   <message key="menu-admin">Admin</message>
+  <message key="menu-concordance-bibliography">Bibliographic concordance</message>
 </catalogue>
