Simplified renaming of sample facets
Added a `<message>` with English label in `translations/messages_en.xml` for all default facets.

--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -17,4 +17,14 @@
   <message key="menu-search">Search</message>
   <message key="menu-admin">Admin</message>
   <message key="menu-concordance-bibliography">Bibliographic concordance</message>
+  <message key="facet-found_provenance">Found Provenance</message>
+  <message key="facet-origin_place">Origin Place</message>
+  <message key="facet-source_repository">Source Repository</message>
+  <message key="facet-support_material">Support Material</message>
+  <message key="facet-support_object_type">Support Object Type</message>
+  <message key="facet-inscription_type">Inscription Type</message>
+  <message key="facet-origin_date_evidence">Origin Date Evidence</message>
+  <message key="facet-mentioned_places">Mentioned Places</message>
+  <message key="facet-mentioned_divinities">Mentioned Divinities</message>
+  <message key="facet-mentioned_institutions">Mentioned Institutions</message>
 </catalogue>
