SigiDoc changes to en translation

--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Example format for catalogue files. -->
 <catalogue xml:lang="en">
-  <message key="menu-inscriptions">Inscriptions</message>
+  <message key="menu-seals">Seals</message>
   <message key="menu-indices">Indices</message>
   <message key="menu-index-abbreviation">Abbreviations</message>
   <message key="menu-index-fragment">Fragments</message>
   <message key="menu-index-lemma">Lemmata</message>
   <message key="menu-index-numeral">Numerals</message>
   <message key="menu-index-person_name">Personal names</message>
-  <message key="menu-index-persons">Persons</message> 
-  <message key="menu-index-divinities">Divinities</message>  
-  <message key="menu-index-mentioned_places">Places</message>
-  <message key="menu-index-institutions">Institutions</message> 
   <message key="menu-index-symbol">Symbols</message>
   <message key="menu-index-word">Words</message>
   <message key="menu-search">Search</message>
   <message key="menu-admin">Admin</message>
-  <message key="menu-concordance-bibliography">Bibliographic concordance</message>
-  <message key="facet-found_provenance">Found Provenance</message>
-  <message key="facet-origin_place">Origin Place</message>
-  <message key="facet-source_repository">Source Repository</message>
-  <message key="facet-support_material">Support Material</message>
-  <message key="facet-support_object_type">Support Object Type</message>
-  <message key="facet-inscription_type">Inscription Type</message>
-  <message key="facet-origin_date_evidence">Origin Date Evidence</message>
-  <message key="facet-mentioned_places">Mentioned Places</message>
-  <message key="facet-mentioned_divinities">Mentioned Divinities</message>
-  <message key="facet-mentioned_institutions">Mentioned Institutions</message>
 </catalogue>
