--- a/webapps/ROOT/assets/translations/messages_bg.xml
+++ b/webapps/ROOT/assets/translations/messages_bg.xml
@@ -1,121 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- LAST MODIFIED: 2023-03-08 -->
+<!-- LAST MODIFIED: 2024-05-27 -->
 
-<catalogue xml:lang="fr" xml:space="preserve">
-    <message key="artifact">Artéfact</message>
-    <message key="type">Type d'objet</message>
-    <message key="not-specified">Non précisé(e)</message>
-    <message key="not-available">Non disponible</message>
-    <message key="undetermined">Indéterminé(e)</message>
-    <message key="not-applicable">Sans objet</message>
-    <message key="general-layout">Disposition d'ensemble</message>
-    <message key="matrix">Matrice</message>
-    <message key="physical-description">Description physique</message>
-    <message key="medium">Type d'empreinte</message>
-    <message key="material">Matériau</message>
-    <message key="dimensions">Dimensions (mm)</message>
-    <message key="diameter">Diam. </message>
-    <message key="height">H. </message>
-    <message key="width">L. </message>
-    <message key="thickness">É. </message>
-    <message key="unknown">Inconnu</message>
-    <message key="weight">Poids (g)</message>
-    <message key="axis">Axe (cadran)</message>
-    <message key="overstrike-orientation">Orient. de la surfrappe (cadran)</message>
-    <message key="channel-orientation">Orient. du canal (cadran)</message>
-    <message key="execution">Exécution</message>
-    <message key="countermark">Contremarque</message>
-    <message key="epigraphy">Épigraphie</message>
-    <message key="shape">Forme</message>
-    <message key="condition">Conservation</message>
-    <message key="dating">Datation</message>
-    <message key="date">Date</message>
-    <message key="internal-date">Date explicite</message>
-    <message key="dating-criteria">Critères de datation</message>
-    <message key="alternative-dating">Date alternative</message>
-    <message key="alternative-dating-basedon">sur la base de</message>
-    <message key="history">Historique</message>
-    <message key="seal-category">Catégorie</message>
-    <message key="issuer">Émetteur</message>
-    <message key="issuer-milieu">Milieu de l'émetteur</message>
-    <message key="place-origin">Lieu d'émission</message>
-    <message key="find-place">Lieu de découverte</message>
-    <message key="find-circumstances">Circonstances de découverte</message>
-    <message key="find-date">Date de découverte</message>
-    <message key="modern-location">Localisation actuelle</message>
-    <message key="institution-repository">Institution et département</message>
-    <message key="collection-inventory">Collection et inventaire</message>
-    <message key="acquisition">Acquisition</message>
-    <message key="previous-locations">Localisations précédentes</message>
-    <message key="modern-observations">Observations modernes</message>
-    <message key="field-obverse">Avers</message>
-    <message key="layout-field">Conception du champ</message>
-    <message key="field-dimensions">Dimensions du champ</message>
-    <message key="iconography">Iconographie</message>
-    <message key="decoration">Décoration</message>
-    <message key="field-reverse">Revers</message>
-    <message key="text">Texte</message>
-    <message key="languages">Langue(s)</message>
-    <message key="images">Images</message>
-    <message key="edition">Édition</message>
-    <message key="interpretive">Interprétative</message>
-    <message key="diplomatic">Diplomatique</message>
-    <message key="legend-translation">Légende et Traduction</message>
-    <message key="references">Bibliographie</message>
-    <message key="editions">Édition(s)</message>
-    <message key="unpublished">Inédit</message>
-    <message key="none">Aucun(e)</message>
-    <message key="parallels">Parallèle(s)</message>
-    <message key="no-parallels-known">Aucun parallèle connu</message>
-    <message key="further-references">Bibliographie additionnelle</message>
-    <message key="commentary">Commentaire</message>
-    <message key="apparatus">Apparat</message>
-    <message key="footnotes">Notes</message>
-    <message key="menu-seals">Sceaux</message>
-    <message key="menu-indices">Indices</message>
-    <message key="menu-search">Rechercher</message>
-    <message key="menu-bibliography">Bibliographie</message>
+<catalogue xml:lang="bg" xml:space="preserve">
+    <message key="artifact">Артефакт</message>
+    <message key="type">Тип</message>
+    <message key="not-specified">xx</message>
+    <message key="not-available">xx</message>
+    <message key="undetermined">xx</message>
+    <message key="not-applicable">xx</message>
+    <message key="matrix">Матрица (печат)</message>
+    <message key="physical-description">Описание</message>
+    <message key="medium">Отпечатък</message>
+    <message key="material">Материал</message>
+    <message key="dimensions">Размери (мм)</message>
+    <message key="diameter">xx</message>
+    <message key="height">xx</message>
+    <message key="width">xx</message>
+    <message key="thickness">xx</message>
+    <message key="unknown">xx</message>
+    <message key="weight">Тегло (гр)</message>
+    <message key="axis">Посока на матриците (по часовниковата стрелка)</message>
+    <message key="overstrike-orientation">Посока на препечатката (по часовниковата стрелка)</message>
+    <message key="channel-orientation">Посока на канала (по часовниковата стрелка)</message>
+    <message key="execution">Начин на изработване</message>
+    <message key="countermark">Контрамарки</message>
+    <message key="epigraphy">Епиграфика</message>
+    <message key="shape">Форма на ядрото</message>
+    <message key="condition">Съвременно състояание</message>
+    <message key="dating">Датиране</message>
+    <message key="date">Датировка</message>
+    <message key="internal-date">Датировка, указана в печата</message>
+    <message key="dating-criteria">Критерии за датиране</message>
+    <message key="alternative-dating">Алтернативна датировка</message>
+    <message key="alternative-dating-basedon">xx</message>
+    <message key="history">История</message>
+    <message key="seal-category">Контекст</message>
+    <message key="issuer">Издател (собственик на печата)</message>
+    <message key="issuer-milieu">Сфера на дейност на издателя (собственика на печата)</message>
+    <message key="place-origin">Място на изработка</message>
+    <message key="find-place">Местонамиране</message>
+    <message key="find-circumstances">Обстоятелства на намиране</message>
+    <message key="find-date">Дата на намиране</message>
+    <message key="modern-location">Съвременно селище, до което е открит печатът</message>
+    <message key="institution-repository">Място на съхранение</message>
+    <message key="collection-inventory">Колекция и инвентарен номер</message>
+    <message key="acquisition">Способ на придобиване</message>
+    <message key="previous-locations">Предишно местосъхранение</message>
+    <message key="modern-observations">Съвременни наблюдения</message>
+    <message key="field-obverse">Лице</message>
+    <message key="layout-field">Оформление на страната</message>
+    <message key="field-dimensions">Размери на матрицата (мм)</message>
+    <message key="iconography">Иконография</message>
+    <message key="decoration">Декорация</message>
+    <message key="field-reverse">Опако</message>
+    <message key="languages">Език (езици)</message>
+    <message key="images">Изображения</message>
+    <message key="edition">Издания</message>
+    <message key="interpretive">Интерпретативно издание</message>
+    <message key="diplomatic">Дипломатично издание</message>
+    <message key="legend-translation">Надписи и превод на надписите</message>
+    <message key="references">Библиография</message>
+    <message key="editions">Публикация (публикации)</message>
+    <message key="unpublished">xx</message>
+    <message key="none">xx</message>
+    <message key="parallels">Паралел (паралели)</message>
+    <message key="no-parallels-known">xx</message>
+    <message key="further-references">Допълнителна библиография</message>
+    <message key="commentary">Коментар на надписите</message>
+    <message key="apparatus">Критичен апарат</message>
+    <message key="footnotes">Бележки под линия</message>
+    <message key="menu-seals">xx</message>
+    <message key="menu-indices">xx</message>
+    <message key="menu-search">xx</message>
+    <message key="menu-bibliography">xx</message>
     <message key="menu-admin">Admin</message>
-    <message key="menu-language">Langues</message>
-    <message key="grc">Grec byzantin</message>
-    <message key="en">Anglais</message>
-    <message key="fr">Français</message>
-    <message key="menu-index-prosopography">Index prosopographique</message>
-    <message key="menu-index-geography">Index géographique</message>
-    <message key="menu-index-dignities">Dignités</message>
-    <message key="menu-index-offices">Fonctions</message>
-    <message key="menu-index-officeCivil">Fonctions civiles</message>
-    <message key="menu-index-officeMilitary">Fonctions militaires</message>
-    <message key="menu-index-officeEcclesiastical">Fonctions ecclésiastiques</message>
-    <message key="menu-index-titles">Titres</message>
-    <message key="menu-index-marianTerms">Termes se rapportant à la Vierge</message>
-    <message key="menu-index-christTerms">Termes se rapportant au Christ</message>
-    <message key="menu-index-saintsTerms">Termes se rapportant aux saints</message>
-    <message key="menu-index-iconography">Iconographie</message>
-    <message key="menu-index-monogram">Monogrammes</message>
-    <message key="menu-index-lemma">Lemmata</message>
-    <message key="menu-index-legendsCases">Cas des légendes</message>
-    <message key="menu-index-metrical">Légendes métriques</message>
-    <message key="menu-index-invocation">Invocations</message>
-    <message key="home-title">SigiDoc 1.0: un corpus modèle</message>
-    <message key="bibliographic-concordance">Bibliographie</message>
-    <message key="inscription-index-zip">Les fichiers SigiDoc XML des éditions de sceaux présentes dans la liste suivante sont disponibles dans une </message>
-    <message key="indices-type-prosopography-geography">Personnes et lieux</message>
-    <message key="indices-type-dignities-offices">Dignités et fonctions</message>
-    <message key="indices-type-religious-appellatives">Termes religieux</message>
-    <message key="indices-type-iconography-monograms">Iconographie et monogrammes</message>
-    <message key="indices-type-other-features">Autres index</message>
-    <message key="search">Rechercher</message>
-    <message key="search-lemmatised-text"> Recherche de texte lemmatisé</message>
-    <message key="search-greek-keyboard">Clavier grec</message>
-    <message key="search-reset">Réinitialiser la recherche</message>
-    <message key="search-filters">Filtres</message>
-    <message key="in">dans</message>
-    <message key="ed"> (éd.),</message>
-    <message key="not-before">Pas avant</message>
-    <message key="not-after">Pas après</message>
-    <message key="arrow-left">&#x021D0; précédent</message>
-    <message key="arrow-right">suivant &#x021D2;</message>
-    <message key="inscription-index-seals">Sceaux</message>
+    <message key="menu-language">Езици</message>
+    <message key="en">xx</message>
+    <message key="fr">xx</message>
+     <message key="de">xx</message>
+    <message key="it">xx</message>
+    <message key="el">xx</message>
+    <message key="bg">xx</message>
+    <message key="menu-index-prosopography">xx</message>
+    <message key="menu-index-geography">xx</message>
+    <message key="menu-index-dignities">xx</message>
+    <message key="menu-index-offices">xx</message>
+    <message key="menu-index-officeCivil">xx</message>
+    <message key="menu-index-officeMilitary">xx</message>
+    <message key="menu-index-officeEcclesiastical">xx</message>
+    <message key="menu-index-titles">xx</message>
+    <message key="menu-index-marianTerms">xx</message>
+    <message key="menu-index-christTerms">xx</message>
+    <message key="menu-index-saintsTerms">xx</message>
+    <message key="menu-index-iconography">Иконография</message>
+    <message key="menu-index-monogram">xx</message>
+    <message key="menu-index-lemma">xx</message>
+    <message key="menu-index-legendsCases">xx</message>
+    <message key="menu-index-metrical">xx</message>
+    <message key="menu-index-invocation">xx</message>
+    <!--<message key="home-title">SigiDoc 1.0: un corpus modèle</message>-->
+    <message key="bibliographic-concordance">Библиография</message>
+    <message key="inscription-index-zip">xx</message>
+    <message key="zip"> xx</message>
+    <message key="indices-type-prosopography-geography">xx</message>
+    <message key="indices-type-dignities-offices">xx</message>
+    <message key="indices-type-religious-appellatives">xx</message>
+    <message key="indices-type-iconography-monograms">xx</message>
+    <message key="indices-type-other-features">xx</message>
+    <message key="search">xx</message>
+    <message key="search-lemmatised-text">xx</message>
+    <message key="search-greek-keyboard">xx</message>
+    <message key="search-reset">xx</message>
+    <message key="search-filters">xx</message>
+    <message key="in">xx</message>
+    <message key="ed"> xx</message>
+    <message key="not-before">xx</message>
+    <message key="not-after">xx</message>
+    <message key="arrow-left">&#x021D0; xx</message>
+    <message key="arrow-right">xx &#x021D2;</message>
+    <message key="inscription-index-seals">xx</message>
+    <message key="no-further-references">xx</message>
+    <message key="personal-names">xx</message>
 </catalogue>
+
