--- a/webapps/ROOT/assets/translations/messages_el.xml
+++ b/webapps/ROOT/assets/translations/messages_el.xml
@@ -1,121 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- LAST MODIFIED: 2023-03-08 -->
+<!-- LAST MODIFIED: 2024-05-27 -->
 
-<catalogue xml:lang="fr" xml:space="preserve">
-    <message key="artifact">Artéfact</message>
-    <message key="type">Type d'objet</message>
-    <message key="not-specified">Non précisé(e)</message><!-- ajouter d'autres façons d'indiquer cela -->
-    <message key="not-available">Non disponible</message>
-    <message key="undetermined">Indéterminé(e)</message>
-    <message key="not-applicable">Sans objet</message>
-    <message key="general-layout">Disposition d'ensemble</message>
-    <message key="matrix">Matrice</message>
-    <message key="physical-description">Description physique</message>
-    <message key="medium">Type d'empreinte</message>
-    <message key="material">Matériau</message>
-    <message key="dimensions">Dimensions (mm)</message>
-    <message key="diameter">Diam. </message>
-    <message key="height">H. </message>
-    <message key="width">L. </message>
-    <message key="thickness">É. </message>
-    <message key="unknown">Inconnu</message><!-- pluriel+féminin?????? -->
-    <message key="weight">Poids (g)</message>
-    <message key="axis">Axe (cadran)</message>
-    <message key="overstrike-orientation">Orient. de la surfrappe (cadran)</message><!-- abrégé!!!??? -->
-    <message key="channel-orientation">Orient. du canal (cadran)</message><!-- abrégé!!!??? -->
-    <message key="execution">Exécution</message>
-    <message key="countermark">Contremarque</message>
-    <message key="epigraphy">Épigraphie</message>
-    <message key="shape">Forme</message>
-    <message key="condition">Conservation</message>
-    <message key="dating">Datation</message>
-    <message key="date">Date</message>
-    <message key="internal-date">Date explicite</message>
-    <message key="dating-criteria">Critères de datation</message>
-    <message key="alternative-dating">Date alternative</message>
-    <message key="alternative-dating-basedon">sur la base de</message>
-    <message key="history">Historique</message>
-    <message key="seal-category">Catégorie</message>
-    <message key="issuer">Émetteur</message>
-    <message key="issuer-milieu">Milieu de l'émetteur</message>
-    <message key="place-origin">Lieu d'émission</message>
-    <message key="find-place">Lieu de découverte</message>
-    <message key="find-circumstances">Circonstances de découverte</message>
-    <message key="find-date">Date de découverte</message>
-    <message key="modern-location">Localisation actuelle</message>
-    <message key="institution-repository">Institution et département</message>
-    <message key="collection-inventory">Collection et inventaire</message>
-    <message key="acquisition">Acquisition</message>
-    <message key="previous-locations">Localisations précédentes</message>
-    <message key="modern-observations">Observations modernes</message>
-    <message key="field-obverse">Avers</message>
-    <message key="layout-field">Conception du champ</message>
-    <message key="field-dimensions">Dimensions du champ</message>
-    <message key="iconography">Iconographie</message>
-    <message key="decoration">Décoration</message>
-    <message key="field-reverse">Revers</message>
-    <message key="text">Texte</message>
-    <message key="languages">Langue(s)</message>
-    <message key="images">Images</message>
-    <message key="edition">Édition</message>
-    <message key="interpretive">Interprétative</message>
-    <message key="diplomatic">Diplomatique</message>
-    <message key="legend-translation">Légende et Traduction</message>
-    <message key="references">Bibliographie</message>
-    <message key="editions">Édition(s)</message>
-    <message key="unpublished">Inédit</message>
-    <message key="none">Aucun(e)</message>
-    <message key="parallels">Parallèle(s)</message>
-    <message key="no-parallels-known">Aucun parallèle connu</message>
-    <message key="further-references">Bibliographie additionnelle</message><!-- ?????????????????????? -->
-    <message key="commentary">Commentaire</message>
-    <message key="apparatus">Apparat</message>
-    <message key="footnotes">Notes</message>
-    <message key="menu-seals">Sceaux</message>
-    <message key="menu-indices">Indices</message>
-    <message key="menu-search">Rechercher</message>
-    <message key="menu-bibliography">Bibliographie</message>
+<catalogue xml:lang="el" xml:space="preserve">
+    <message key="artifact">Τέχνεργο</message>
+    <message key="type">Τύπος</message>
+    <message key="not-specified">xx</message>
+    <message key="not-available">xx</message>
+    <message key="undetermined">xx</message>
+    <message key="not-applicable">xx</message>
+    <message key="matrix">Μήτρα</message>
+    <message key="physical-description">Περιγραφή</message>
+    <message key="medium">Μεσαίος (τύπος αποτυπώματος)</message>
+    <message key="material">Υλικό</message>
+    <message key="dimensions">Διαστάσεις (χιλ.)</message>
+    <message key="diameter">xx</message>
+    <message key="height">xx</message>
+    <message key="width">xx</message>
+    <message key="thickness">xx</message>
+    <message key="unknown">xx</message>
+    <message key="weight">Βάρος (γρ.)</message>
+    <message key="axis">Άξονας</message>
+    <message key="overstrike-orientation">Κατεύθυνση επικοπής</message>
+    <message key="channel-orientation">Κατεύθυνση του καναλιού του κενού δίσκου</message>
+    <message key="execution">Τρόπος εκτέλεσης</message>
+    <message key="countermark">Επισήμανση</message>
+    <message key="epigraphy">Επιγραφική</message>
+    <message key="shape">xx</message>
+    <message key="condition">Κατάσταση διατήρησης</message>
+    <message key="dating">Χρονολόγηση</message>
+    <message key="date">Χρονολογία</message>
+    <message key="internal-date">Ημερομηνία, αναγραφή στο μολυβδόβουλλο</message>
+    <message key="dating-criteria">Κριτήρια χρονολόγησης</message>
+    <message key="alternative-dating">Εναλλακτική χρονολόγηση</message>
+    <message key="alternative-dating-basedon">xx</message>
+    <message key="history">Ιστορία</message>
+    <message key="seal-category">Κατηγορίες</message>
+    <message key="issuer">Εκδότης μολυβδοβούλλου</message>
+    <message key="issuer-milieu">Πεδίο δραστηριοποίησης του εκδότη (κατόχου του μολυβδοβούλλου)</message>
+    <message key="place-origin">Τοποθεσία παραγωγής</message>
+    <message key="find-place">Τοποθεσία εύρεσης</message>
+    <message key="find-circumstances">Συνθήκες εύρεσης</message>
+    <message key="find-date">Ημερομηνία εύρεσης</message>
+    <message key="modern-location">Σύχρονη τοποθεσία</message>
+    <message key="institution-repository">Ίδρυμα και αποθετήριο (Τοποθεσία αποθήκευσης)</message>
+    <message key="collection-inventory">Συλλογή και απογραφή (Αριθμός συλλογής και αποθέματος)</message>
+    <message key="acquisition">Τρόπος απόκτησης</message>
+    <message key="previous-locations">Προηγούμενη θέση αποθήκευσης</message>
+    <message key="modern-observations">Σύγχρονες παρατηρήσεις</message>
+    <message key="field-obverse">Εμπροσθότυπος</message>
+    <message key="layout-field">Διάταξη του πεδίου</message>
+    <message key="field-dimensions">Διαστάσεις πεδίου της μήτρας (χιλ.)</message>
+    <message key="iconography">Εικονογραφία</message>
+    <message key="decoration">Διακόσμηση</message>
+    <message key="field-reverse">Опако</message>
+    <message key="languages">Γλώσσα (γλώσσες)</message>
+    <message key="images">Εικόνες</message>
+    <message key="edition">Εκδόσεις</message>
+    <message key="interpretive">Ερμηνευτική έκδοση</message>
+    <message key="diplomatic">Διπλωματική έκδοση</message>
+    <message key="legend-translation">Επιγραφή και μετάφραση επιγραφών</message>
+    <message key="references">Παραπομπές</message>
+    <message key="editions">Έκδοση (εκδόσεις)</message>
+    <message key="unpublished">xx</message>
+    <message key="none">xx</message>
+    <message key="parallels">Παράλληλο (παράδειγμα)</message>
+    <message key="no-parallels-known">xx</message>
+    <message key="further-references">Περαιτέρω παραπομπές</message>
+    <message key="commentary">Σχολιασμός</message>
+    <message key="apparatus">Κριτικό υπόμνημα</message>
+    <message key="footnotes">Υποσημειώσεις</message>
+    <message key="menu-seals">xx</message>
+    <message key="menu-indices">xx</message>
+    <message key="menu-search">xx</message>
+    <message key="menu-bibliography">xx</message>
     <message key="menu-admin">Admin</message>
-    <message key="menu-language">Langues</message>
-    <message key="grc">Grec byzantin</message>
-    <message key="en">Anglais</message>
-    <message key="fr">Français</message>
-    <message key="menu-index-prosopography">Index prosopographique</message>
-    <message key="menu-index-geography">Index géographique</message>
-    <message key="menu-index-dignities">Dignités</message>
-    <message key="menu-index-offices">Fonctions</message>
-    <message key="menu-index-officeCivil">Fonctions civiles</message>
-    <message key="menu-index-officeMilitary">Fonctions militaires</message>
-    <message key="menu-index-officeEcclesiastical">Fonctions ecclésiastiques</message>
-    <message key="menu-index-titles">Titres</message>
-    <message key="menu-index-marianTerms">Termes se rapportant à la Vierge</message>
-    <message key="menu-index-christTerms">Termes se rapportant au Christ</message>
-    <message key="menu-index-saintsTerms">Termes se rapportant aux saints</message>
-    <message key="menu-index-iconography">Iconographie</message>
-    <message key="menu-index-monogram">Monogrammes</message>
-    <message key="menu-index-lemma">Lemmata</message>
-    <message key="menu-index-legendsCases">Cas des légendes</message>
-    <message key="menu-index-metrical">Légendes métriques</message>
-    <message key="menu-index-invocation">Invocations</message>
-    <message key="home-title">SigiDoc 1.0: un corpus modèle</message>
-    <message key="bibliographic-concordance">Bibliographie</message>
-    <message key="inscription-index-zip">Les fichiers SigiDoc XML des éditions de sceaux présentes dans la liste suivante sont disponibles dans une </message>
-    <message key="indices-type-prosopography-geography">Personnes et lieux</message>
-    <message key="indices-type-dignities-offices">Dignités et fonctions</message>
-    <message key="indices-type-religious-appellatives">Termes religieux</message>
-    <message key="indices-type-iconography-monograms">Iconographie et monogrammes</message>
-    <message key="indices-type-other-features">Autres index</message>
-    <message key="search">Rechercher</message>
-    <message key="search-lemmatised-text"> Recherche de texte lemmatisé</message>
-    <message key="search-greek-keyboard">Clavier grec</message>
-    <message key="search-reset">Réinitialiser la recherche</message>
-    <message key="search-filters">Filtres</message>
-    <message key="in">dans</message>
-    <message key="ed"> (éd.),</message>
-    <message key="not-before">Pas avant</message>
-    <message key="not-after">Pas après</message>
-    <message key="arrow-left">&#x021D0; précédent</message>
-    <message key="arrow-right">suivant &#x021D2;</message>
-    <message key="inscription-index-seals">Sceaux</message>
+    <message key="menu-language">Γλώσσες</message>
+    <message key="en">Αγγλικά</message>
+    <message key="fr">Γαλλικά</message>
+     <message key="de">Γερμανικά</message>
+    <message key="it">Ιταλικά</message>
+    <message key="el">Ελληνικά</message>
+    <message key="bg">Βουλγαρικά</message>
+    <message key="menu-index-prosopography">xx</message>
+    <message key="menu-index-geography">xx</message>
+    <message key="menu-index-dignities">xx</message>
+    <message key="menu-index-offices">xx</message>
+    <message key="menu-index-officeCivil">xx</message>
+    <message key="menu-index-officeMilitary">xx</message>
+    <message key="menu-index-officeEcclesiastical">xx</message>
+    <message key="menu-index-titles">xx</message>
+    <message key="menu-index-marianTerms">xx</message>
+    <message key="menu-index-christTerms">xx</message>
+    <message key="menu-index-saintsTerms">xx</message>
+    <message key="menu-index-iconography">Εικονογραφία</message>
+    <message key="menu-index-monogram">xx</message>
+    <message key="menu-index-lemma">xx</message>
+    <message key="menu-index-legendsCases">xx</message>
+    <message key="menu-index-metrical">xx</message>
+    <message key="menu-index-invocation">xx</message>
+    <!--<message key="home-title">SigiDoc 1.0: un corpus modèle</message>-->
+    <message key="bibliographic-concordance">Παραπομπές</message>
+    <message key="inscription-index-zip">xx</message>
+    <message key="zip"> xx</message>
+    <message key="indices-type-prosopography-geography">xx</message>
+    <message key="indices-type-dignities-offices">xx</message>
+    <message key="indices-type-religious-appellatives">xx</message>
+    <message key="indices-type-iconography-monograms">xx</message>
+    <message key="indices-type-other-features">xx</message>
+    <message key="search">xx</message>
+    <message key="search-lemmatised-text">xx</message>
+    <message key="search-greek-keyboard">xx</message>
+    <message key="search-reset">xx</message>
+    <message key="search-filters">xx</message>
+    <message key="in">xx</message>
+    <message key="ed"> xx</message>
+    <message key="not-before">xx</message>
+    <message key="not-after">xx</message>
+    <message key="arrow-left">&#x021D0; xx</message>
+    <message key="arrow-right">xx &#x021D2;</message>
+    <message key="inscription-index-seals">xx</message>
+    <message key="no-further-references">xx</message>
+    <message key="personal-names">xx</message>
 </catalogue>
