--- a/webapps/ROOT/assets/translations/messages_fr.xml
+++ b/webapps/ROOT/assets/translations/messages_fr.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- LAST MODIFIED: 2023-03-08 -->
+<!-- LAST MODIFIED: 2024-05-27 -->
 
 <catalogue xml:lang="fr" xml:space="preserve">
     <message key="artifact">Artéfact</message>
@@ -9,7 +9,6 @@
     <message key="not-available">Non disponible</message>
     <message key="undetermined">Indéterminé(e)</message>
     <message key="not-applicable">Sans objet</message>
-    <message key="general-layout">Disposition d'ensemble</message>
     <message key="matrix">Matrice</message>
     <message key="physical-description">Description physique</message>
     <message key="medium">Type d'empreinte</message>
@@ -78,9 +77,12 @@
     <message key="menu-bibliography">Bibliographie</message>
     <message key="menu-admin">Admin</message>
     <message key="menu-language">Langues</message>
-    <message key="grc">Grec byzantin</message>
     <message key="en">Anglais</message>
     <message key="fr">Français</message>
+    <message key="de">Allemand</message>
+    <message key="it">Italien</message>
+    <message key="el">Grec</message>
+    <message key="bg">Bulgare</message>
     <message key="menu-index-prosopography">Index prosopographique</message>
     <message key="menu-index-geography">Index géographique</message>
     <message key="menu-index-dignities">Dignités</message>
@@ -101,13 +103,14 @@
     <message key="home-title">SigiDoc 1.0: un corpus modèle</message>
     <message key="bibliographic-concordance">Bibliographie</message>
     <message key="inscription-index-zip">Les fichiers SigiDoc XML des éditions de sceaux présentes dans la liste suivante sont disponibles dans une </message>
+    <message key="zip"> dossier compressé</message>
     <message key="indices-type-prosopography-geography">Personnes et lieux</message>
     <message key="indices-type-dignities-offices">Dignités et fonctions</message>
     <message key="indices-type-religious-appellatives">Termes religieux</message>
     <message key="indices-type-iconography-monograms">Iconographie et monogrammes</message>
     <message key="indices-type-other-features">Autres index</message>
     <message key="search">Rechercher</message>
-    <message key="search-lemmatised-text"> Recherche de texte lemmatisé</message>
+    <message key="search-lemmatised-text">Recherche de texte lemmatisé</message>
     <message key="search-greek-keyboard">Clavier grec</message>
     <message key="search-reset">Réinitialiser la recherche</message>
     <message key="search-filters">Filtres</message>
@@ -118,4 +121,6 @@
     <message key="arrow-left">&#x021D0; précédent</message>
     <message key="arrow-right">suivant &#x021D2;</message>
     <message key="inscription-index-seals">Sceaux</message>
+    <message key="no-further-references">Aucune autre mention</message>
+    <message key="personal-names">Prénoms</message>
 </catalogue>
