--- a/webapps/ROOT/assets/translations/messages_it.xml
+++ b/webapps/ROOT/assets/translations/messages_it.xml
@@ -1,121 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- LAST MODIFIED: 2023-03-08 -->
+<!-- LAST MODIFIED: 2024-05-27 -->
 
-<catalogue xml:lang="fr" xml:space="preserve">
-    <message key="artifact">Artéfact</message>
-    <message key="type">Type d'objet</message>
-    <message key="not-specified">Non précisé(e)</message><!-- ajouter d'autres façons d'indiquer cela -->
-    <message key="not-available">Non disponible</message>
-    <message key="undetermined">Indéterminé(e)</message>
-    <message key="not-applicable">Sans objet</message>
-    <message key="general-layout">Disposition d'ensemble</message>
+<catalogue xml:lang="it" xml:space="preserve">
+    <message key="artifact">Manufatto</message>
+    <message key="type">Tipo di oggetto</message>
+    <message key="not-specified">Non specificato</message>
+    <message key="not-available">Non disponibile</message>
+    <message key="undetermined">Indeterminato</message>
+    <message key="not-applicable">Non pertinente</message>
     <message key="matrix">Matrice</message>
-    <message key="physical-description">Description physique</message>
-    <message key="medium">Type d'empreinte</message>
-    <message key="material">Matériau</message>
-    <message key="dimensions">Dimensions (mm)</message>
-    <message key="diameter">Diam. </message>
-    <message key="height">H. </message>
+    <message key="physical-description">Descrizione fisica</message>
+    <message key="medium">Tipo di impronta</message>
+    <message key="material">Materiale</message>
+    <message key="dimensions">Dimensioni (mm)</message>
+    <message key="diameter">Diametro</message>
+    <message key="height">A.</message>
     <message key="width">L. </message>
-    <message key="thickness">É. </message>
-    <message key="unknown">Inconnu</message><!-- pluriel+féminin?????? -->
-    <message key="weight">Poids (g)</message>
-    <message key="axis">Axe (cadran)</message>
-    <message key="overstrike-orientation">Orient. de la surfrappe (cadran)</message><!-- abrégé!!!??? -->
-    <message key="channel-orientation">Orient. du canal (cadran)</message><!-- abrégé!!!??? -->
-    <message key="execution">Exécution</message>
-    <message key="countermark">Contremarque</message>
-    <message key="epigraphy">Épigraphie</message>
+    <message key="thickness">S. </message>
+    <message key="unknown">Non noto</message>
+    <message key="weight">Peso (g)</message>
+    <message key="axis">Asse (quadrante)</message>
+    <message key="overstrike-orientation">Orientazione dell'overstrike (quadrante)</message>
+    <message key="channel-orientation">Orientazione del canale (quadrante)</message>
+    <message key="execution">Esecuzione</message>
+    <message key="countermark">Contromarca</message>
+    <message key="epigraphy">Epigrafia</message>
     <message key="shape">Forme</message>
-    <message key="condition">Conservation</message>
-    <message key="dating">Datation</message>
-    <message key="date">Date</message>
-    <message key="internal-date">Date explicite</message>
-    <message key="dating-criteria">Critères de datation</message>
-    <message key="alternative-dating">Date alternative</message>
-    <message key="alternative-dating-basedon">sur la base de</message>
-    <message key="history">Historique</message>
-    <message key="seal-category">Catégorie</message>
-    <message key="issuer">Émetteur</message>
-    <message key="issuer-milieu">Milieu de l'émetteur</message>
-    <message key="place-origin">Lieu d'émission</message>
-    <message key="find-place">Lieu de découverte</message>
-    <message key="find-circumstances">Circonstances de découverte</message>
-    <message key="find-date">Date de découverte</message>
-    <message key="modern-location">Localisation actuelle</message>
-    <message key="institution-repository">Institution et département</message>
-    <message key="collection-inventory">Collection et inventaire</message>
-    <message key="acquisition">Acquisition</message>
-    <message key="previous-locations">Localisations précédentes</message>
-    <message key="modern-observations">Observations modernes</message>
-    <message key="field-obverse">Avers</message>
-    <message key="layout-field">Conception du champ</message>
-    <message key="field-dimensions">Dimensions du champ</message>
-    <message key="iconography">Iconographie</message>
-    <message key="decoration">Décoration</message>
-    <message key="field-reverse">Revers</message>
-    <message key="text">Texte</message>
-    <message key="languages">Langue(s)</message>
-    <message key="images">Images</message>
-    <message key="edition">Édition</message>
-    <message key="interpretive">Interprétative</message>
-    <message key="diplomatic">Diplomatique</message>
-    <message key="legend-translation">Légende et Traduction</message>
-    <message key="references">Bibliographie</message>
-    <message key="editions">Édition(s)</message>
-    <message key="unpublished">Inédit</message>
-    <message key="none">Aucun(e)</message>
-    <message key="parallels">Parallèle(s)</message>
-    <message key="no-parallels-known">Aucun parallèle connu</message>
-    <message key="further-references">Bibliographie additionnelle</message><!-- ?????????????????????? -->
-    <message key="commentary">Commentaire</message>
-    <message key="apparatus">Apparat</message>
-    <message key="footnotes">Notes</message>
-    <message key="menu-seals">Sceaux</message>
-    <message key="menu-indices">Indices</message>
-    <message key="menu-search">Rechercher</message>
-    <message key="menu-bibliography">Bibliographie</message>
+    <message key="condition">Condizioni di preservazione</message>
+    <message key="dating">Datazione</message>
+    <message key="date">Data</message>
+    <message key="internal-date">Data interna</message>
+    <message key="dating-criteria">Criteri di datazione</message>
+    <message key="alternative-dating">Criteri di datazione</message>
+    <message key="alternative-dating-basedon">in base a</message>
+    <message key="history">Storia</message>
+    <message key="seal-category">Categoria</message>
+    <message key="issuer">Emittente</message>
+    <message key="issuer-milieu">Ambito dell'emittente</message>
+    <message key="place-origin">Luogo d'origine</message>
+    <message key="find-place">Luogo del ritrovamento</message>
+    <message key="find-circumstances">Circostanze del ritrovamento</message>
+    <message key="find-date">Data del ritrovamento</message>
+    <message key="modern-location">Luogo di conservazione</message>
+    <message key="institution-repository">Istituzione e fondo</message>
+    <message key="collection-inventory">Collezione ed inventario</message>
+    <message key="acquisition">Acquisizione</message>
+    <message key="previous-locations">Luoghi di conservazione precedenti</message>
+    <message key="modern-observations">Osservazioni moderne</message>
+    <message key="field-obverse">Dritto</message>
+    <message key="layout-field">Layout del campo</message>
+    <message key="field-dimensions">Dimensioni del campo (mm)</message>
+    <message key="iconography">Iconografia</message>
+    <message key="decoration">Decorazione</message>
+    <message key="field-reverse">Rovescio</message>
+    <message key="text">Testo</message>
+    <message key="languages">Lingua(e)</message>
+    <message key="images">Immagini</message>
+    <message key="edition">Edizioni</message>
+    <message key="interpretive">Interpretativa</message>
+    <message key="diplomatic">Diplomatica</message>
+    <message key="legend-translation">Testo e Traduzione</message>
+    <message key="references">Bibliografia</message>
+    <message key="editions">Edizioni</message>
+    <message key="unpublished">Inedito</message>
+    <message key="none">Nessuno(a)</message>
+    <message key="parallels">Paralleli</message>
+    <message key="no-parallels-known">Nessun parallelo noto</message>
+    <message key="further-references">Ulteriore bibliografia</message>
+    <message key="commentary">Commento</message>
+    <message key="apparatus">Apparato critico</message>
+    <message key="footnotes">Note</message>
+    <message key="menu-seals">Sigilli</message>
+    <message key="menu-indices">Indici</message>
+    <message key="menu-search">Ricerca</message>
+    <message key="menu-bibliography">Bibliografia</message>
     <message key="menu-admin">Admin</message>
-    <message key="menu-language">Langues</message>
-    <message key="grc">Grec byzantin</message>
-    <message key="en">Anglais</message>
-    <message key="fr">Français</message>
-    <message key="menu-index-prosopography">Index prosopographique</message>
-    <message key="menu-index-geography">Index géographique</message>
-    <message key="menu-index-dignities">Dignités</message>
-    <message key="menu-index-offices">Fonctions</message>
-    <message key="menu-index-officeCivil">Fonctions civiles</message>
-    <message key="menu-index-officeMilitary">Fonctions militaires</message>
-    <message key="menu-index-officeEcclesiastical">Fonctions ecclésiastiques</message>
-    <message key="menu-index-titles">Titres</message>
-    <message key="menu-index-marianTerms">Termes se rapportant à la Vierge</message>
-    <message key="menu-index-christTerms">Termes se rapportant au Christ</message>
-    <message key="menu-index-saintsTerms">Termes se rapportant aux saints</message>
-    <message key="menu-index-iconography">Iconographie</message>
-    <message key="menu-index-monogram">Monogrammes</message>
-    <message key="menu-index-lemma">Lemmata</message>
-    <message key="menu-index-legendsCases">Cas des légendes</message>
-    <message key="menu-index-metrical">Légendes métriques</message>
-    <message key="menu-index-invocation">Invocations</message>
-    <message key="home-title">SigiDoc 1.0: un corpus modèle</message>
-    <message key="bibliographic-concordance">Bibliographie</message>
-    <message key="inscription-index-zip">Les fichiers SigiDoc XML des éditions de sceaux présentes dans la liste suivante sont disponibles dans une </message>
-    <message key="indices-type-prosopography-geography">Personnes et lieux</message>
-    <message key="indices-type-dignities-offices">Dignités et fonctions</message>
-    <message key="indices-type-religious-appellatives">Termes religieux</message>
-    <message key="indices-type-iconography-monograms">Iconographie et monogrammes</message>
-    <message key="indices-type-other-features">Autres index</message>
-    <message key="search">Rechercher</message>
-    <message key="search-lemmatised-text"> Recherche de texte lemmatisé</message>
-    <message key="search-greek-keyboard">Clavier grec</message>
-    <message key="search-reset">Réinitialiser la recherche</message>
-    <message key="search-filters">Filtres</message>
-    <message key="in">dans</message>
-    <message key="ed"> (éd.),</message>
-    <message key="not-before">Pas avant</message>
-    <message key="not-after">Pas après</message>
-    <message key="arrow-left">&#x021D0; précédent</message>
-    <message key="arrow-right">suivant &#x021D2;</message>
-    <message key="inscription-index-seals">Sceaux</message>
+    <message key="menu-language">Lingue</message>
+    <message key="en">Inglese</message>
+    <message key="fr">Francese</message>
+     <message key="de">Tedesco</message>
+    <message key="it">Italiano</message>
+    <message key="el">Greco</message>
+    <message key="bg">Bulgaro</message>
+    <message key="menu-index-prosopography">Indice prosopografico</message>
+    <message key="menu-index-geography">Indice geografico</message>
+    <message key="menu-index-dignities">Dignità</message>
+    <message key="menu-index-offices">Funzioni</message>
+    <message key="menu-index-officeCivil">Funzioni civili</message>
+    <message key="menu-index-officeMilitary">Funzioni militari</message>
+    <message key="menu-index-officeEcclesiastical">Funzioni ecclesiastiche</message>
+    <message key="menu-index-titles">Titoli</message>
+    <message key="menu-index-marianTerms">Termini relativi alla Vergine</message>
+    <message key="menu-index-christTerms">Termini relativi a Cristo</message>
+    <message key="menu-index-saintsTerms">Termini relativi ai Santi</message>
+    <message key="menu-index-iconography">Iconografia</message>
+    <message key="menu-index-monogram">Monogrammi</message>
+    <message key="menu-index-lemma">Lemmi</message>
+    <message key="menu-index-legendsCases">Casi delle legende</message>
+    <message key="menu-index-metrical">Legende metriche</message>
+    <message key="menu-index-invocation">Invocazioni</message>
+    <!--<message key="home-title">SigiDoc 1.0: un corpus modèle</message>-->
+    <message key="bibliographic-concordance">Bibliografia</message>
+    <message key="inscription-index-zip">I file SigiDoc-XML delle edizioni di sigilli indicate nell'elenco seguente sono disponibili in una</message>
+    <message key="zip"> cartella compressa</message>
+    <message key="indices-type-prosopography-geography">Persone e luoghi</message>
+    <message key="indices-type-dignities-offices">Dignità e funzioni</message>
+    <message key="indices-type-religious-appellatives">Termini religiosi</message>
+    <message key="indices-type-iconography-monograms">Iconografia e monogrammi</message>
+    <message key="indices-type-other-features">Altri indici</message>
+    <message key="search">Cerca</message>
+    <message key="search-lemmatised-text">Cerca nel testo lemmatizzato</message>
+    <message key="search-greek-keyboard">Tastiera greca</message>
+    <message key="search-reset">Ripristinare la ricerca</message>
+    <message key="search-filters">Filtri</message>
+    <message key="in">in</message>
+    <message key="ed"> (ed.),</message>
+    <message key="not-before">Non prima di</message>
+    <message key="not-after">Non dopo</message>
+    <message key="arrow-left">&#x021D0; precedente</message>
+    <message key="arrow-right">seguente &#x021D2;</message>
+    <message key="inscription-index-seals">Sigilli</message>
+    <message key="no-further-references">Nessun riferimento bibliografico</message>
+    <message key="personal-names">Nomi propri</message>
 </catalogue>
