--- a/webapps/ROOT/assets/translations/messages_bg.xml
+++ b/webapps/ROOT/assets/translations/messages_bg.xml
@@ -122,5 +122,22 @@
     <message key="inscription-index-seals">xx</message>
     <message key="no-further-references">xx</message>
     <message key="personal-names">xx</message>
+    <message key="facet-holding_entity">Prénoms</message>
+    <message key="facet-collection">Collection</message>
+    <message key="facet-personal_names">Prénoms</message>
+    <message key="facet-family_names">Noms de famille</message>
+    <message key="facet-milieu">Milieu</message>
+    <message key="facet-place_names">Lieux</message>
+    <message key="facet-dignities">Dignités</message>
+    <message key="facet-civil_offices">Fonctions civiles</message>
+    <message key="facet-ecclesiastical_offices">Fonctions ecclésiastiques</message>
+    <message key="facet-military_offices">Fonctions militaires</message>
+    <message key="facet-marian_terms">Termes se rapportant à la Vierge</message>
+    <message key="facet-christ-related_terms">Termes se rapportant au Christ</message>
+    <message key="facet-saints-related_terms">Termes se rapportant aux Saints</message>
+    <message key="facet-metrical">Légendes métriques</message>
+    <message key="facet-monogram">Monogrammes</message>
+    <message key="facet-legend_case">Cas des légendes</message>
+    <message key="facet-iconography">Iconographie</message>
 </catalogue>
 
