--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -1,15 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Example format for catalogue files. -->
-<catalogue xml:lang="en">
-  <message key="menu-seals">Seals</message>
-  <message key="menu-indices">Indices</message>
-  <message key="menu-index-abbreviation">Abbreviations</message>
-  <message key="menu-index-fragment">Fragments</message>
-  <message key="menu-index-lemma">Lemmata</message>
-  <message key="menu-index-numeral">Numerals</message>
-  <message key="menu-index-person_name">Personal names</message>
-  <message key="menu-index-symbol">Symbols</message>
-  <message key="menu-index-word">Words</message>
-  <message key="menu-search">Search</message>
-  <message key="menu-admin">Admin</message>
+<catalogue xml:lang="en" xml:space="preserve">
+    <message key="artifact">Artifact</message>
+    <message key="type">Type</message>
+    <message key="not-specified">Not specified</message>
+    <message key="not-available">Not available</message>
+    <message key="undetermined">Undetermined</message>
+    <message key="not-applicable">Not applicable</message>
+  <message key="unknown">Unknown</message>
+    <message key="matrix">Matrix</message>
+    <message key="physical-description">Physical description</message>
+    <message key="medium">Medium</message>
+    <message key="material">Material</message>
+    <message key="dimensions">Dimensions (mm)</message>
+    <message key="diameter">Diam.</message>
+    <message key="height">H.</message>
+    <message key="width">W.</message>
+    <message key="thickness">Th.</message>
+    <message key="weight">Weight (g)</message>
+    <message key="axis">Axis (dial)</message>
+    <message key="overstrike-orientation">Overstrike Orientation (dial)</message><!-- abbreviated!!!??? -->
+    <message key="channel-orientation">Channel Orientation (dial)</message><!-- abbreviated!!!??? -->
+    <message key="execution">Execution</message>
+    <message key="countermark">Countermark</message>
+    <message key="epigraphy">Epigraphy</message>
+    <message key="shape">Shape</message>
+    <message key="condition">Condition</message>
+    <message key="dating">Dating</message>
+    <message key="date">Date</message>
+    <message key="internal-date">Explicit Date</message>
+    <message key="dating-criteria">Dating Criteria</message>
+    <message key="alternative-dating">Alternative Date</message>
+    <message key="alternative-dating-basedon">based on</message>
+    <message key="history">History</message>
+    <message key="seal-category">Category</message>
+    <message key="issuer">Issuer</message>
+    <message key="issuer-milieu">Issuer's Background</message>
+    <message key="place-origin">Place of Issuance</message>
+    <message key="find-place">Place of Discovery</message>
+    <message key="find-circumstances">Circumstances of Discovery</message>
+    <message key="find-date">Date of Discovery</message>
+    <message key="modern-location">Current Location</message>
+    <message key="institution-repository">Institution and Department</message>
+    <message key="collection-inventory">Collection and Inventory</message>
+    <message key="acquisition">Acquisition</message>
+    <message key="previous-locations">Previous Locations</message>
+    <message key="modern-observations">Modern Observations</message>
+    <message key="field-obverse">Obverse</message>
+    <message key="layout-field">Field Design</message>
+    <message key="field-dimensions">Field Dimensions</message>
+    <message key="iconography">Iconography</message>
+    <message key="decoration">Decoration</message>
+    <message key="field-reverse">Reverse</message>
+    <message key="text">Text</message>
+    <message key="languages">Language(s)</message>
+    <message key="images">Images</message>
+    <message key="edition">Edition</message>
+    <message key="interpretive">Interpretive</message>
+    <message key="diplomatic">Diplomatic</message>
+    <message key="legend-translation">Legend and Translation</message>
+    <message key="references">Bibliography</message>
+    <message key="editions">Edition(s)</message>
+    <message key="unpublished">Unpublished</message>
+    <message key="none">None</message>
+    <message key="parallels">Parallel(s)</message>
+    <message key="no-parallels-known">No known parallel</message>
+    <message key="further-references">Additional Bibliography</message><!-- ?????????????????????? -->
+    <message key="commentary">Commentary</message>
+    <message key="apparatus">Apparatus</message>
+    <message key="footnotes">Footnotes</message>
+    <message key="menu-seals">Seals</message>
+    <message key="menu-indices">Indices</message>
+    <message key="menu-search">Search</message>
+    <message key="menu-bibliography">Bibliography</message>
+    <message key="menu-admin">Admin</message>
+    <message key="menu-language">Languages</message>
+    <message key="en">English</message>
+    <message key="fr">French</message>
+    <message key="de">German</message>
+    <message key="it">Italian</message>
+    <message key="el">Greek</message>
+    <message key="bg">Bulgarian</message>
+    <message key="menu-index-prosopography">Prosopographical Index</message>
+    <message key="menu-index-geography">Geographical Index</message>
+    <message key="menu-index-dignities">Dignities</message>
+    <message key="menu-index-offices">Offices</message>
+    <message key="menu-index-officeCivil">Civil Offices</message>
+    <message key="menu-index-officeMilitary">Military Offices</message>
+    <message key="menu-index-officeEcclesiastical">Ecclesiastical Offices</message>
+    <message key="menu-index-titles">Titles</message>
+    <message key="menu-index-marianTerms">Terms related to the Virgin</message>
+    <message key="menu-index-christTerms">Terms related to Christ</message>
+    <message key="menu-index-saintsTerms">Terms related to Saints</message>
+    <message key="menu-index-iconography">Iconography</message>
+    <message key="menu-index-monogram">Monograms</message>
+    <message key="menu-index-lemma">Lemmata</message>
+    <message key="menu-index-legendsCases">Cases of Legends</message>
+    <message key="menu-index-metrical">Metrical Legends</message>
+    <message key="menu-index-invocation">Invocations</message>
+    <message key="home-title">SigiDoc 1.0: A Model Corpus</message>
+    <message key="bibliographic-concordance">Bibliography</message>
+    <message key="inscription-index-zip">The SigiDoc XML files of the seal editions listed below are available in a </message>
+    <message key="zip"> compressed folder</message>
+    <message key="indices-type-prosopography-geography">People and Places</message>
+    <message key="indices-type-dignities-offices">Dignities and Offices</message>
+    <message key="indices-type-religious-appellatives">Religious Terms</message>
+    <message key="indices-type-iconography-monograms">Iconography and Monograms</message>
+    <message key="indices-type-other-features">Other Indices</message>
+    <message key="search">Search</message>
+    <message key="search-lemmatised-text">Lemmatized Text Search</message>
+    <message key="search-greek-keyboard">Greek Keyboard</message>
+    <message key="search-reset">Reset Search</message>
+    <message key="search-filters">Filters</message>
+    <message key="in">in</message>
+    <message key="ed"> (ed.),</message>
+    <message key="not-before">Not Before</message>
+    <message key="not-after">Not After</message>
+    <message key="arrow-left">&#x021D0; previous</message>
+    <message key="arrow-right">next &#x021D2;</message>
+    <message key="inscription-index-seals">Seals</message>
+    <message key="no-further-references">No further references</message>
+    <message key="facet-holding_entity">First Names</message>
+    <message key="facet-collection">Collection</message>
+    <message key="facet-personal_names">First Names</message>
+    <message key="facet-family_names">Family Names</message>
+    <message key="facet-milieu">Background</message>
+    <message key="facet-place_names">Places</message>
+    <message key="facet-dignities">Dignities</message>
+    <message key="facet-civil_offices">Civil Offices</message>
+    <message key="facet-ecclesiastical_offices">Ecclesiastical Offices</message>
+    <message key="facet-military_offices">Military Offices</message>
+    <message key="facet-marian_terms">Terms related to the Virgin</message>
+    <message key="facet-christ-related_terms">Terms related to Christ</message>
+    <message key="facet-saints-related_terms">Terms related to Saints</message>
+    <message key="facet-metrical">Metrical Legends</message>
+    <message key="facet-monogram">Type of Monogram</message>
+    <message key="facet-legend_case">Cases of Legends</message>
+    <message key="facet-iconography">Iconography</message>
 </catalogue>
