--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Example format for catalogue files. -->
 <catalogue xml:lang="en" xml:space="preserve">
+    <message key="yes">yes</message>
+    <message key="no">no</message>
+    <message key="uncertain">uncertain</message>
     <message key="artifact">Artifact</message>
     <message key="type">Type</message>
     <message key="not-specified">Not specified</message>
     <message key="not-available">Not available</message>
     <message key="undetermined">Undetermined</message>
     <message key="not-applicable">Not applicable</message>
-  <message key="unknown">Unknown</message>
+    <message key="unknown">Unknown</message>
     <message key="matrix">Matrix</message>
     <message key="physical-description">Physical description</message>
     <message key="medium">Medium</message>
@@ -18,9 +21,9 @@
     <message key="width">W.</message>
     <message key="thickness">Th.</message>
     <message key="weight">Weight (g)</message>
-    <message key="axis">Axis (dial)</message>
-    <message key="overstrike-orientation">Overstrike Orientation (dial)</message><!-- abbreviated!!!??? -->
-    <message key="channel-orientation">Channel Orientation (dial)</message><!-- abbreviated!!!??? -->
+    <message key="axis">Axis (clock)</message>
+    <message key="overstrike-orientation">Overstrike orientation (clock)</message>
+    <message key="channel-orientation">Channel orientation (clock)</message>
     <message key="execution">Execution</message>
     <message key="countermark">Countermark</message>
     <message key="epigraphy">Epigraphy</message>
@@ -28,44 +31,43 @@
     <message key="condition">Condition</message>
     <message key="dating">Dating</message>
     <message key="date">Date</message>
-    <message key="internal-date">Explicit Date</message>
-    <message key="dating-criteria">Dating Criteria</message>
-    <message key="alternative-dating">Alternative Date</message>
+    <message key="internal-date">Internal date</message>
+    <message key="dating-criteria">Dating criteria</message>
+    <message key="alternative-dating">Alternative date</message>
     <message key="alternative-dating-basedon">based on</message>
     <message key="history">History</message>
     <message key="seal-category">Category</message>
     <message key="issuer">Issuer</message>
-    <message key="issuer-milieu">Issuer's Background</message>
-    <message key="place-origin">Place of Issuance</message>
-    <message key="find-place">Place of Discovery</message>
-    <message key="find-circumstances">Circumstances of Discovery</message>
-    <message key="find-date">Date of Discovery</message>
-    <message key="modern-location">Current Location</message>
-    <message key="institution-repository">Institution and Department</message>
-    <message key="collection-inventory">Collection and Inventory</message>
+    <message key="issuer-milieu">Issuer's milieu</message>
+    <message key="place-origin">Place of origin</message>
+    <message key="find-place">Find place</message>
+    <message key="find-circumstances">Find circumstances</message>
+    <message key="find-date">Find date</message>
+    <message key="modern-location">Modern location</message>
+    <message key="institution-repository">Institution and repository</message>
+    <message key="collection-inventory">Collection and inventory</message>
     <message key="acquisition">Acquisition</message>
-    <message key="previous-locations">Previous Locations</message>
-    <message key="modern-observations">Modern Observations</message>
+    <message key="previous-locations">Previous locations</message>
+    <message key="modern-observations">Modern observations</message>
     <message key="field-obverse">Obverse</message>
-    <message key="layout-field">Field Design</message>
-    <message key="field-dimensions">Field Dimensions</message>
+    <message key="layout-field">Layout of field</message>
+    <message key="field-dimensions">Field dimensions (mm)</message>
     <message key="iconography">Iconography</message>
     <message key="decoration">Decoration</message>
     <message key="field-reverse">Reverse</message>
-    <message key="text">Text</message>
     <message key="languages">Language(s)</message>
     <message key="images">Images</message>
     <message key="edition">Edition</message>
     <message key="interpretive">Interpretive</message>
     <message key="diplomatic">Diplomatic</message>
-    <message key="legend-translation">Legend and Translation</message>
-    <message key="references">Bibliography</message>
+    <message key="legend-translation">Legend and translation</message>
+    <message key="references">References</message>
     <message key="editions">Edition(s)</message>
     <message key="unpublished">Unpublished</message>
     <message key="none">None</message>
     <message key="parallels">Parallel(s)</message>
-    <message key="no-parallels-known">No known parallel</message>
-    <message key="further-references">Additional Bibliography</message><!-- ?????????????????????? -->
+    <message key="no-parallels-known">No parallels known</message>
+    <message key="further-references">Further references</message>
     <message key="commentary">Commentary</message>
     <message key="apparatus">Apparatus</message>
     <message key="footnotes">Footnotes</message>
@@ -81,13 +83,13 @@
     <message key="it">Italian</message>
     <message key="el">Greek</message>
     <message key="bg">Bulgarian</message>
-    <message key="menu-index-prosopography">Prosopographical Index</message>
-    <message key="menu-index-geography">Geographical Index</message>
+    <message key="menu-index-prosopography">Prosopographical index</message>
+    <message key="menu-index-geography">Geographical index</message>
     <message key="menu-index-dignities">Dignities</message>
     <message key="menu-index-offices">Offices</message>
-    <message key="menu-index-officeCivil">Civil Offices</message>
-    <message key="menu-index-officeMilitary">Military Offices</message>
-    <message key="menu-index-officeEcclesiastical">Ecclesiastical Offices</message>
+    <message key="menu-index-officeCivil">Civil offices</message>
+    <message key="menu-index-officeMilitary">Military offices</message>
+    <message key="menu-index-officeEcclesiastical">Ecclesiastical offices</message>
     <message key="menu-index-titles">Titles</message>
     <message key="menu-index-marianTerms">Terms related to the Virgin</message>
     <message key="menu-index-christTerms">Terms related to Christ</message>
@@ -95,10 +97,10 @@
     <message key="menu-index-iconography">Iconography</message>
     <message key="menu-index-monogram">Monograms</message>
     <message key="menu-index-lemma">Lemmata</message>
-    <message key="menu-index-legendsCases">Cases of Legends</message>
-    <message key="menu-index-metrical">Metrical Legends</message>
+    <message key="menu-index-legendsCases">Cases of legends</message>
+    <message key="menu-index-metrical">Metrical legends</message>
     <message key="menu-index-invocation">Invocations</message>
-    <message key="home-title">SigiDoc 1.0: A Model Corpus</message>
+    <message key="home-title">SigiDoc 1.0: A Sample Corpus</message>
     <message key="bibliographic-concordance">Bibliography</message>
     <message key="inscription-index-zip">The SigiDoc XML files of the seal editions listed below are available in a </message>
     <message key="zip"> compressed folder</message>
@@ -108,33 +110,33 @@
     <message key="indices-type-iconography-monograms">Iconography and Monograms</message>
     <message key="indices-type-other-features">Other Indices</message>
     <message key="search">Search</message>
-    <message key="search-lemmatised-text">Lemmatized Text Search</message>
+    <message key="search-lemmatised-text">Lemmatized text search</message>
     <message key="search-greek-keyboard">Greek Keyboard</message>
     <message key="search-reset">Reset Search</message>
     <message key="search-filters">Filters</message>
     <message key="in">in</message>
     <message key="ed"> (ed.),</message>
-    <message key="not-before">Not Before</message>
-    <message key="not-after">Not After</message>
+    <message key="not-before">Not before</message>
+    <message key="not-after">Not after</message>
     <message key="arrow-left">&#x021D0; previous</message>
     <message key="arrow-right">next &#x021D2;</message>
     <message key="inscription-index-seals">Seals</message>
     <message key="no-further-references">No further references</message>
-    <message key="facet-holding_entity">First Names</message>
+    <message key="facet-holding_entity">Holding institution</message>
     <message key="facet-collection">Collection</message>
-    <message key="facet-personal_names">First Names</message>
-    <message key="facet-family_names">Family Names</message>
-    <message key="facet-milieu">Background</message>
-    <message key="facet-place_names">Places</message>
+    <message key="facet-personal_names">Personal names</message>
+    <message key="facet-family_names">Family names</message>
+    <message key="facet-milieu">Milieu</message>
+    <message key="facet-place_names">Place names</message>
     <message key="facet-dignities">Dignities</message>
-    <message key="facet-civil_offices">Civil Offices</message>
-    <message key="facet-ecclesiastical_offices">Ecclesiastical Offices</message>
-    <message key="facet-military_offices">Military Offices</message>
+    <message key="facet-civil_offices">Civil offices</message>
+    <message key="facet-ecclesiastical_offices">Ecclesiastical offices</message>
+    <message key="facet-military_offices">Military offices</message>
     <message key="facet-marian_terms">Terms related to the Virgin</message>
     <message key="facet-christ-related_terms">Terms related to Christ</message>
     <message key="facet-saints-related_terms">Terms related to Saints</message>
-    <message key="facet-metrical">Metrical Legends</message>
+    <message key="facet-metrical">Metrical legends</message>
     <message key="facet-monogram">Type of Monogram</message>
-    <message key="facet-legend_case">Cases of Legends</message>
+    <message key="facet-legend_case">Cases of legends</message>
     <message key="facet-iconography">Iconography</message>
 </catalogue>
