--- a/webapps/ROOT/assets/translations/messages_fr.xml
+++ b/webapps/ROOT/assets/translations/messages_fr.xml
@@ -3,6 +3,9 @@
 <!-- LAST MODIFIED: 2024-05-27 -->
 
 <catalogue xml:lang="fr" xml:space="preserve">
+    <message key="yes">oui</message>
+    <message key="no">non</message>
+    <message key="uncertain">uncertain</message>
     <message key="artifact">Artéfact</message>
     <message key="type">Type d'objet</message>
     <message key="not-specified">Non précisé(e)</message><!-- ajouter d'autres façons d'indiquer cela -->
@@ -122,7 +125,7 @@
     <message key="arrow-right">suivant &#x021D2;</message>
     <message key="inscription-index-seals">Sceaux</message>
     <message key="no-further-references">Aucune autre mention</message>
-    <message key="facet-holding_entity">Prénoms</message>
+    <message key="facet-holding_entity">Institution</message>
     <message key="facet-collection">Collection</message>
     <message key="facet-personal_names">Prénoms</message>
     <message key="facet-family_names">Noms de famille</message>
