Added translations for facet "object type"

--- a/webapps/ROOT/assets/translations/messages_bg.xml
+++ b/webapps/ROOT/assets/translations/messages_bg.xml
@@ -142,5 +142,6 @@
     <message key="facet-monogram">Monogrammes</message>
     <message key="facet-legend_case">Cas des légendes</message>
     <message key="facet-iconography">Iconographie</message>
+    <message key="facet-object_type">Тип</message>
 </catalogue>
 
