--- a/webapps/ROOT/assets/translations/messages_en.xml
+++ b/webapps/ROOT/assets/translations/messages_en.xml
@@ -139,4 +139,5 @@
     <message key="facet-monogram">Type of Monogram</message>
     <message key="facet-legend_case">Cases of legends</message>
     <message key="facet-iconography">Iconography</message>
+    <message key="facet-object_type">Object type</message>
 </catalogue>
