--- a/webapps/ROOT/assets/translations/messages_el.xml
+++ b/webapps/ROOT/assets/translations/messages_el.xml
@@ -141,4 +141,5 @@
     <message key="facet-monogram">Monogrammes</message>
     <message key="facet-legend_case">Cas des légendes</message>
     <message key="facet-iconography">Iconographie</message>
+    <message key="facet-object_type">Τύπος</message>
 </catalogue>
