--- a/webapps/ROOT/assets/translations/messages_fr.xml
+++ b/webapps/ROOT/assets/translations/messages_fr.xml
@@ -142,4 +142,5 @@
     <message key="facet-monogram">Typ de monogramme</message>
     <message key="facet-legend_case">Cas des légendes</message>
     <message key="facet-iconography">Iconographie</message>
+    <message key="facet-object_type">Type d'objet</message>
 </catalogue>
