--- a/webapps/ROOT/assets/translations/messages_it.xml
+++ b/webapps/ROOT/assets/translations/messages_it.xml
@@ -142,4 +142,5 @@
     <message key="facet-monogram">Tipo di monogramma</message>
     <message key="facet-legend_case">Casi delle legende</message>
     <message key="facet-iconography">Iconografia</message>
+    <message key="facet-object_type">Tipo di oggetto</message>
 </catalogue>
