Implemented "gender" facet

--- a/webapps/ROOT/assets/translations/messages_bg.xml
+++ b/webapps/ROOT/assets/translations/messages_bg.xml
@@ -143,5 +143,6 @@
     <message key="facet-legend_case">Cas des légendes</message>
     <message key="facet-iconography">Iconographie</message>
     <message key="facet-object_type">Тип</message>
+    <message key="facet-gender">Gender</message>
 </catalogue>
 
