--- a/webapps/ROOT/assets/translations/messages_de.xml
+++ b/webapps/ROOT/assets/translations/messages_de.xml
@@ -143,4 +143,5 @@
     <message key="facet-legend_case">Kasus der Inschriften</message>
     <message key="facet-iconography">Ikonographie</message>
     <message key="facet-object_type">Objekttyp</message>
+    <message key="facet-gender">Geschlecht</message>
 </catalogue>
