--- a/webapps/ROOT/assets/translations/messages_fr.xml
+++ b/webapps/ROOT/assets/translations/messages_fr.xml
@@ -143,4 +143,5 @@
     <message key="facet-legend_case">Cas des légendes</message>
     <message key="facet-iconography">Iconographie</message>
     <message key="facet-object_type">Type d'objet</message>
+    <message key="facet-gender">Gender</message>
 </catalogue>
